--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -44,8 +44,8 @@
                                             {% include "bag/product-info.html" %}
                                         </div>
                                         <div class="col-12 col-sm-6 order-sm-last">
-                                            <p class="my-0">Price Each: ${{ item.product.price }}</p>
-                                            <p><strong>Subtotal: </strong>${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                            <p class="my-0">Price Each: €{{ item.product.price }}</p>
+                                            <p><strong>Subtotal: </strong>€{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                         </div>
                                         <div class="col-12 col-sm-6">
                                             {% include "bag/quantity-form.html" %}
@@ -64,7 +64,7 @@
                                     <thead class="text-black">
                                         <tr>
                                             <th scope="col">Product Info</th>
-                                            <th scope="col"></th>
+                                            <th scope="col">Detail</th>
                                             <th scope="col">Price</th>
                                             <th scope="col">Qty</th>
                                             <th scope="col">Subtotal</th>
@@ -79,13 +79,13 @@
                                                 {% include "bag/product-info.html" %}
                                             </td>
                                             <td class="py-3">
-                                                <p class="my-0">${{ item.product.price }}</p>
+                                                <p class="my-0">€{{ item.product.price }}</p>
                                             </td>
                                             <td class="py-3 w-25">
                                                 {% include "bag/quantity-form.html" %}
                                             </td>
                                             <td class="py-3">
-                                                <p class="my-0">${{ item.product.price | calc_subtotal:item.quantity }}</p>
+                                                <p class="my-0">€{{ item.product.price | calc_subtotal:item.quantity }}</p>
                                             </td>
                                         </tr>
                                     {% endfor %}
