refactor: Favourites icon and link update

--- a/templates/base.html
+++ b/templates/base.html
@@ -86,7 +86,7 @@
                     </li>
                     <!-- Favourites -->
                      <li class="list-inline-item">
-                        <a class="nav-link" href="{% url 'view_product_favourites' %}">
+                        <a class="{% if favourites_count %} font-weight-bold{% else %}text-black{% endif %} nav-link" href="{% url 'view_product_favourites' %}">
                             <div class="text-center">
                                 {% if favourites_count %}
                                     <div><i class="fas fa-heart"></i></div>
