--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -11,131 +11,124 @@
 {% endblock %}
 {% block content %}
     <div class="overlay"></div>
-    <div class="hero-image">
         <div class="section-holder">
             <div class="form-holder-lg">
-                <div class="container">
-                    <div class="bg-overlay"></div>
-                    <div class="row">
-                        <div class="col">
-                            <h1 class="header-font mb-2 pt-4 text-center black-white">{{ news_item.title}}</h1>
+                <div class="row">
+                    <div class="col">
+                        <h1 class="header-font mb-2 pt-4 text-center black-white">{{ news_item.title}}</h1>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        <div class="text-center">
+                            {% if news_item.image %}
+                                <img class="card-img-top" src="{{ news_item.image.url }}" alt="{{ news_item.title }}" />
+                            {% else %}
+                                <img class="card-img-top" src="{{ news_item.image_url }}" alt="{{ news_item.title }}" />
+                            {% endif %}
                         </div>
                     </div>
-                    <hr>
-                    <!-- News Item -->
-                    <div class="container">
-                        <div class="col">
-                            <div class="text-center">
-                                {% if news_item.image %}
-                                <img src="{{ news_item.image.url }}" alt="{{ news_item.title }}" />
-                                {% else %}
-                                <img src="{{ news_item.image_url }}" alt="{{ news_item.title }}" />
-                                {% endif %}
-                            </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                <div class="my-2">
-                                    <p class="card-text">{{ news_item.news_item_text }}</p>
-                                    <p class="text-muted">Posted By: {{ news_item.user }} on the {{ news_item.create_date }}</p>
-                                    {% if news_item.user == request.user or request.user.is_superuser %}
-                                        <a class="btn btn-black" href="{% url 'edit_news_item' news_item.id %}" role="button">Edit</a>
-                                        <button type="button" class="btn green-btn" data-toggle="modal"
-                                        data-target="#deleteNewsItem">
-                                        Delete</button>
-                                        <!-- Delete Button Modal -->
-                                        <div class="modal fade" id="deleteNewsItem" tabindex="-1" role="dialog" aria-labelledby="deleteNewsItem" aria-hidden="true">
-                                            <div class="modal-dialog modal-dialog-centered" role="document">
-                                                <div class="modal-content">
-                                                    <div class="modal-header">
-                                                        <h5>Delete News Item {{ news_item.title }} </h5>
-                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                                                            <span aria-hidden="true">&times;</span>
-                                                        </button>
-                                                    </div>
-                                                    <div class="modal-body">
-                                                        You are about to delete Title ({{ news_item.title }}) and all
-                                                        ({{ comments|length }}) user comments, are you sure??
-                                                    </div>
-                                                    <div class="modal-footer">
-                                                    </div>
-                                                </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col">
+                        <div class="my-2">
+                            <p class="card-text">{{ news_item.news_item_text }}</p>
+                            <p class="text-muted">Posted By: {{ news_item.user }} on the {{ news_item.create_date }}</p>
+                            {% if news_item.user == request.user or request.user.is_superuser %}
+                                <a class="btn btn-black" href="{% url 'edit_news_item' news_item.id %}" role="button">Edit</a>
+                                <button type="button" class="btn green-btn" data-toggle="modal"
+                                data-target="#deleteNewsItem">
+                                Delete</button>
+                                <!-- Delete Button Modal -->
+                                <div class="modal fade" id="deleteNewsItem" tabindex="-1" role="dialog" aria-labelledby="deleteNewsItem" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered" role="document">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h5>Delete News Item {{ news_item.title }} </h5>
+                                                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                    <span aria-hidden="true">&times;</span>
+                                                </button>
                                             </div>
+                                            <div class="modal-body">
+                                                You are about to delete Title ({{ news_item.title }}) and all
+                                                ({{ comments|length }}) user comments, are you sure??
+                                            </div>
+                                            <div class="modal-footer">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            {% endif %}
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="row">
+                    <div class="col mb-4">
+                        <h2 class="text-uppercase mt-3">Comments:</h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col">
+                        {% for comment in comments %}
+                        <div class="shadow-sm p-1 mb-3 bg-white rounded">
+                            <p class="font-weight-bold mb-2 mt-3">Posted by: {{ comment.user }} on {{ comment.create_date }}</p>
+                            <p class="text-black mb-2 mt-3">{{ comment.comment_text }}</p>
+                            {% if comment.user == request.user or request.user.is_superuser %}
+                            <!-- Delete Button trigger modal -->
+                            <button type="button" class="btn green-btn" data-bs-toggle="modal"
+                                data-bs-target="#delete-comment{{ comment.id }}">
+                                Delete
+                            </button>
+                            <!-- Delete Comment Modal -->
+                            <div class="modal fade" id="delete-comment{{ comment.id }}" tabindex="-1" aria-hidden="true">
+                                <div class="modal-dialog modal-dialog-centered" role="document">
+                                    <div class="modal-content">
+                                        <div class="modal-header">
+                                            <h3 class="modal-title">Delete Comment</h3>
+                                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                        </div>
+                                        <div class="modal-body">
+                                            <h4>Are you sure you want to delete the comment?</h4>
+                                        </div>
+                                        <div class="modal-footer">
+                                            <a href="{% url 'news_item' news_item.id %}" class="btn green-btn"> Cancel</a>
+                                            <a href="{% url 'delete_comment' comment.id %}" class="btn red-btn">
+                                                Delete</a>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                             {% endif %}
                         </div>
-                        <hr>
+                        {% endfor %}
                     </div>
-                    <!-- Comments on news items -->
-                    <div class="container">
-                        <div class="row">
-                            <div class="col mb-4">
-                                <h2 class="text-uppercase mt-3">Comments:</h2>
+                </div>
+                <!-- Add a comment form -->
+                <div class="row pb-5">
+                    <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
+                        {% if request.user.is_authenticated %}
+                            <h3 class="text-uppercase">Add a comment</h3>
+                                <form class="form" method="POST">
+                                    {% csrf_token %}
+                                    <fieldset>
+                                        {{ comment_form|crispy }}
+                                    </fieldset>
+                                    <button class="btn black-btn" type="submit"> Post
+                                        Comment</button>
+                                </form>
+                        {% else %}
+                            <div>
+                                <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
+                                <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
                             </div>
-                        </div>
-                        <div class="row">
-                            <div class="col">
-                                {% for comment in comments %}
-                                <div class="shadow-sm p-1 mb-3 bg-white rounded">
-                                    <p class="font-weight-bold mb-2 mt-3">Posted by: {{ comment.user }} on {{ comment.create_date }}</p>
-                                    <p class="text-black mb-2 mt-3">{{ comment.comment_text }}</p>
-                                    {% if comment.user == request.user or request.user.is_superuser %}
-                                    <!-- Delete Button trigger modal -->
-                                    <button type="button" class="btn green-btn" data-bs-toggle="modal"
-                                        data-bs-target="#delete-comment{{ comment.id }}">
-                                        Delete
-                                    </button>
-                                    <!-- Delete Comment Modal -->
-                                    <div class="modal fade" id="delete-comment{{ comment.id }}" tabindex="-1" aria-hidden="true">
-                                        <div class="modal-dialog modal-dialog-centered" role="document">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <h3 class="modal-title">Delete Comment</h3>
-                                                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <h4>Are you sure you want to delete the comment?</h4>
-                                                </div>
-                                                <div class="modal-footer">
-                                                    <a href="{% url 'news_item' news_item.id %}" class="btn green-btn"> Cancel</a>
-                                                    <a href="{% url 'delete_comment' comment.id %}" class="btn red-btn">
-                                                        Delete</a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    {% endif %}
-                                </div>
-                                {% endfor %}
-                                                  <!-- Comment Form -->
-                        <div class="container container-pd">
-                            <div class="row pb-5">
-                                <div class="col-lg-6 col-md-12 mt-1 pl-0 pb-4">
-                                    {% if request.user.is_authenticated %}
-                                    <h3 class="text-uppercase">Add a comment</h3>
-                                    <form class="form" method="POST">
-                                        {% csrf_token %}
-                                        <fieldset>
-                                            {{ comment_form|crispy }}
-                                        </fieldset>
-                                        <button class="btn black-btn" type="submit"> Post
-                                            Comment</button>
-                                    </form>
-                                </div>
-                            </div>
-                                {% else %}
-                                <div class="form-check-label" for="id-save-info">
-                                    <a class="text-info" href="{% url 'account_signup' %}">Create an account</a> or
-                                    <a class="text-info" href="{% url 'account_login' %}">login</a> to comment on this post.
-                                </div>
-                                {% endif %}
-                        </div>
-                            </div>
-                            {% if comments.has_other_pages %}
-                                <!-- Pagination -->
-                                <div class="pagination-holder p-4">
+                        {% endif %}
+                    </div>
+                </div>
+                {% if comments.has_other_pages %}
+                    <!-- Pagination -->
+                    <div class="pagination-holder p-4">
                                     <nav aria-label="Products sorted">
                                       <ul class="pagination">
                                         {% if comments.has_previous %}
@@ -158,11 +151,7 @@
                                       </ul>
                                     </nav>
                                 </div>
-                            {% endif %}
-                        </div>
-                    </div>
-                </div>
+                {% endif %}
             </div>
         </div>
-    </div>
 {% endblock %}
