--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -21,7 +21,7 @@
                     <div class="row">
                         <div class="col">
                             <hr>
-                            <h2 class="logo-font mb-4">Checkout</h2>
+                            <h1 class="logo-font mb-4">Checkout</h1>
                             <hr>
                         </div>
                     </div>
@@ -41,9 +41,9 @@
                                     <div class="col-2 mb-1">
                                         <a href="{% url 'product_detail' item.product.id %}">
                                             {% if item.product.image %}
-                                                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+                                                <img class="w-100" src="{{ item.product.image.url }}" alt="{{ item.product.name }}">
                                             {% else %}
-                                                <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ product.name }}">
+                                                <img class="w-100" src="{{ MEDIA_URL }}noimage.png" alt="{{ item.product.name }}">
                                             {% endif %}
                                         </a>
                                     </div>
@@ -125,11 +125,11 @@
                     </div>
                 </div>
                 <div id="loading-overlay">
-                    <h1 class="text-light logo-font loading-spinner">
+                    <div class="text-light logo-font loading-spinner">
                         <span class="icon">
                             <i class="fas fa-3x fa-sync-alt fa-spin"></i>
                         </span>
-                    </h1>
+                    </div>
                 </div>
             </div>
         </div>
