--- a/templates/base.html
+++ b/templates/base.html
@@ -6,6 +6,8 @@
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <meta name="description" content="A rugby ecommerce site where shoppers can buy jerseys and boots">
+        <meta name="keywords" content="rugby,jerseys,boots">
     {% endblock %}
     {% block extra_meta %}
     {% endblock %}
@@ -16,7 +18,9 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
+        <!-- User style css -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
+        <!-- Favicon -->
         <link rel="icon" type="image/png" href="{{ MEDIA_URL }}favicon/favicon.ico"/>
         <!-- Font Awesome css -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css" integrity="sha512-xA6Hp6oezhjd6LiLZynuukm80f8BoZ3OpcEYaqKoCV3HKQDrYjDE1Gu8ocxgxoXmwmSzM4iqPvCsOkQNiu41GA==" crossorigin="anonymous" type="text/css">
@@ -32,6 +36,8 @@
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
         <!-- Stripe js -->
         <script src="https://js.stripe.com/v3/"></script>
+        <!-- EmailJS javascript library-->
+        <script src="https://cdn.jsdelivr.net/npm/emailjs-com@2/dist/email.min.js"></script>
         {% endblock %}
     {% block extra_js %}
     {% endblock %}
@@ -170,19 +176,19 @@
             <div class="row">
             <div class="col-lg-3">
                 <i class="fas fa-cart-plus font-white" aria-hidden=true></i>
-                <span class="font-white">Free Shipping for orders of €50 or more</span>
+                <span class="font-white">Free delivery for orders of €{{ free_delivery_threshold }} or more</span>
             </div>
             <div class="col-lg-3">
                 <i class="fas fa-gifts font-white" aria-hidden=true></i>
-                <span class="font-white">Professional Packaging for EVERY order</span>
+                <span class="font-white">Professional packaging for EVERY order</span>
             </div>
             <div class="col-lg-3">
                 <i class="fas fa-shipping-fast font-white" aria-hidden=true></i>
-                <span class="font-white">Fast Order Dispatch time usually on the next day</span>
+                <span class="font-white">Fast order dispatch time usually on the next day</span>
             </div>
             <div class="col-lg-3">
                 <i class="fas fa-grin-hearts font-white" aria-hidden=true></i>
-                <span class="font-white">Professional and Knowledgeable rugby fans</span>
+                <span class="font-white">Professional and knowledgeable rugby fans</span>
             </div>
         </div>    
       </div>
@@ -195,11 +201,11 @@
         <div class="col-lg-4 col-md-12 mb-4 mb-lg-0"><img src="{{ MEDIA_URL }}logo/logo_grey.png" alt="website logo grey" class="mb-3 logo">
           <p class="">Love Rugby is an online rugby shop selling boots, jerseys and accessories</p>
           <ul class="list-inline mt-4">
-            <li class="list-inline-item"><a href="http://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="dark-green fa fa-twitter"></i></a></li>
-            <li class="list-inline-item"><a href="http://www.facebook.com" target="_blank" rel="noreferrer" aria-label="Go to our facebook page (opens in new tab)" title="facebook"><i class="dark-green fa fa-facebook"></i></a></li>
-            <li class="list-inline-item"><a href="http://www.instagram.com" target="_blank" rel="noreferrer" aria-label="Go to our instagram page (opens in new tab)" title="instagram"><i class="dark-green fa fa-instagram"></i></a></li>
-            <li class="list-inline-item"><a href="http://www.pinterest.com" target="_blank" rel="noreferrer" aria-label="Go to our pinterest page (opens in new tab)" title="pinterest"><i class="dark-green fa fa-pinterest"></i></a></li>
-            <li class="list-inline-item"><a href="http://www.snapchat.com" target="_blank" rel="noreferrer" aria-label="Go to our snapchat page (opens in new tab)" title="snapchat"><i class="dark-green fa fa-snapchat"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.twitter.com" target="_blank" rel="noreferrer" aria-label="Go to our twitter page (opens in new tab)" title="twitter"><i class="dark-green fa fa-twitter"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.facebook.com" target="_blank" rel="noreferrer" aria-label="Go to our facebook page (opens in new tab)" title="facebook"><i class="dark-green fa fa-facebook"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.instagram.com" target="_blank" rel="noreferrer" aria-label="Go to our instagram page (opens in new tab)" title="instagram"><i class="dark-green fa fa-instagram"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.pinterest.com" target="_blank" rel="noreferrer" aria-label="Go to our pinterest page (opens in new tab)" title="pinterest"><i class="dark-green fa fa-pinterest"></i></a></li>
+            <li class="list-inline-item"><a href="https://www.snapchat.com" target="_blank" rel="noreferrer" aria-label="Go to our snapchat page (opens in new tab)" title="snapchat"><i class="dark-green fa fa-snapchat"></i></a></li>
           </ul>
         </div>
         <div class="col-lg-2 col-md-6 mb-4 mb-lg-0">
@@ -229,13 +235,13 @@
             <!-- Newsletter signup -->
             <h2 class="text-uppercase font-weight-bold mb-4 footer-text">Newsletter</h2>
             <p class="mb-4">Sign up for a weekly newsletter for exclusive discounts</p>
-            <div class="p-1 rounded border">
-              <form id="mailinglistform" onsubmit="">
+            <div class="p-1 rounded border" id="mailing-list">
+              <form id="mailinglistform" onsubmit="return sendMail(this);">
                 <div class="input-group">
                   <label for="email_address" hidden>Email Address:</label>
-                  <input type="email" placeholder="Enter your email address" id="email_address" name="email_address" aria-describedby="button-addon1" class="form-control border-0 shadow-0">
+                  <input type="email" placeholder="Enter your email address" id="email_address" name="email_address" aria-describedby="newsletter" class="form-control border-0 shadow-0">
                   <div class="input-group-append">
-                    <button id="button-addon1" type="submit" value="newsletter" class="btn btn-link green-btn">Signup</button>
+                    <button id="newsletter" type="submit" value="newsletter" class="btn btn-link green-btn">Signup</button>
                   </div>
                 </div>
               </form>
@@ -252,6 +258,7 @@
   </footer>
   {% block postloadjs %}
     <script src="{% static 'js/toast.js' %}"></script>
+    <script src="{% static 'js/send_email.js' %}"></script>
   {% endblock %}
   </body>
 </html>
