--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -56,7 +56,7 @@
                             <div class="row">
                                 <div class="col-12 col-md-4">
                                     <p class="small mb-0 text-black font-weight-bold">
-                                        {{ item.product.name }}{% if item.product_size %} - Size {{ item.product.size|upper }}{% endif %}
+                                        {{ item.product.name }}{% if item.product.size %} - Size {{ item.product.size|upper }}{% endif %}
                                     </p>
                                 </div>
                                 <div class="col-12 col-md-8 text-md-right">
