refactor: Wave validation fixes, addition of label to form items

--- a/checkout/static/checkout/css/checkout.css
+++ b/checkout/static/checkout/css/checkout.css
@@ -36,7 +36,7 @@ select option {
 }
 select:invalid,
 select option[value=""] {
-    color: #aab7c4 !important;
+    color: #2B3131 !important;
 }
 #loading-overlay {
 	display: none;
