--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -174,7 +174,7 @@
                 <div class="row">
                     <div class="col-12 col-lg-7 text-right">
                         {% if from_profile %}
-                            <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                            <a href="{% url 'profile' %}" class="btn black-btn my-2">
                                 <span class="icon mr-2">
                                     <i class="fas fa-angle-left"></i>
                                 </span>
