feat: Add count on product, sale, favourites page from database query

--- a/favourites/templates/favourites/favourites.html
+++ b/favourites/templates/favourites/favourites.html
@@ -13,7 +13,7 @@
     <div class="container-fluid px-3 favourites-page">
         <div class="row">
             <div class="col-12 col-sm-6 p-4 my-auto">
-                <h1 class="font-black-bg">Favourites</h1>
+                <h1 class="font-black-bg">Favourites ({{ favourites_items_count }})</h1>
                 <p class="font-black-bg">Here are your favourites saved</p>
             </div>
             <!-- Sorting -->
