--- a/news/templates/news/news.html
+++ b/news/templates/news/news.html
@@ -13,7 +13,7 @@
         <div class="container px-3 products-page">
             <div class="row news-items">
                 <div class="col mt-3">
-                    <h1 class="header-font mb-2 pt-1 text-center text-black">News Items</h1>
+                    <h1 class="header-font mb-2 pt-1 text-center text-black">News Items ({{ news_items_count }})</h1>
                 </div>
             </div>
             <hr>
