--- a/products/templates/products/sale_items.html
+++ b/products/templates/products/sale_items.html
@@ -13,7 +13,7 @@
     <div class="container-fluid px-3 products-page">
         <div class="row">
             <div class="col-12 col-sm-6 p-4 my-auto">
-                <h1 class="font-black-bg">Sale Items</h1>
+                <h1 class="font-black-bg">Sale Items ({{ sale_items_count }})</h1>
                 <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories on sale</p>
             </div>
             <div class="col-12 col-sm-6 p-4 my-auto">
