--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -13,7 +13,7 @@
 <div class="container-fluid px-3 products-page">
     <div class="row">
         <div class="col-12 col-sm-6 p-4 my-auto">
-            <h1 class="font-black-bg">Products</h1>
+            <h1 class="font-black-bg">Products ({{product_count}})</h1>
             <p class="font-black-bg">Browse our extensive rugby boots, jerseys and accessories</p>
         </div>
         <div class="col-12 col-sm-6 p-4 my-auto">
