feat: Add count of comments on news item

--- a/news/templates/news/news_item.html
+++ b/news/templates/news/news_item.html
@@ -65,8 +65,8 @@
                 </div>
                 <hr>
                 <div class="row">
-                    <div class="col mb-4">
-                        <h2 class="text-uppercase mt-3">Comments:</h2>
+                    <div class="col mb-2">
+                        <h2 class="text-uppercase mt-3">Comments ({{ number_of_comments }})</h2>
                     </div>
                 </div>
                 <div class="row">
